--- a/example.yaml
+++ b/example.yaml
@@ -7,9 +7,10 @@ features:
   uts: true
   user: true
 specs:
-  proc_path: "/mnt/proc"
   uid_map:
     - "0 100000 65536"
   gid_map:
     - "0 100000 65536"
   root_path: "/mnt"
+  command: "/bin/bash"
+  hostname: "CONTAINER"
