--- a/example.yaml
+++ b/example.yaml
@@ -14,3 +14,6 @@ specs:
   root_path: "/mnt"
   command: "/bin/bash"
   hostname: "CONTAINER"
+env:
+  "PULSE_SERVER": "tcp:/127.0.0.1"
+  "DISPLAY": ":0"
