--- a/example.yaml
+++ b/example.yaml
@@ -17,3 +17,5 @@ specs:
 env:
   "PULSE_SERVER": "tcp:/127.0.0.1"
   "DISPLAY": ":0"
+  "TERM": "xterm-256color"
+  "PATH": "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games"
